Fixed missing padding between input field and button on single field forms where grid layout is not applied

--- a/src/components/MembershipCardForm/MembershipCardForm.module.scss
+++ b/src/components/MembershipCardForm/MembershipCardForm.module.scss
@@ -6,10 +6,11 @@
   margin: 0 auto;
   display: grid;
   grid-template-columns: repeat(1, 1fr);
-  gap: 25px;
+  gap: 13px;
 
   &--add-only {
-    display: block;
+    display: flex;
+    flex-direction: column;
     margin: 0 auto;
     max-width: 470px;
   }
